fixed spacing issue for exhibition groupings

--- a/scss/forward/style.scss
+++ b/scss/forward/style.scss
@@ -1861,7 +1861,12 @@ input[type=search] {
     border-bottom: 3px solid $color-alfa-2;
     line-height: 0.1em;
     margin: 0 0 2.5em;
+}
+.related h2 {
     padding-top: 2.5em;
+}
+.exhibitions h2 {
+    padding-top: 0;
 }
 
 .related h2 span,
